<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SeekerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/song_curr_duration"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:paddingLeft="15dp"
            android:gravity="left"
            android:text=""
            android:textSize="13sp" />

        <ImageButton
            android:id="@+id/button_prev"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:src="@drawable/ic_skip_prev_big" />

        <ImageButton
            android:id="@+id/button_play_pause"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_button" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:src="@drawable/ic_skip_big" />

        <TextView
            android:id="@+id/song_duration"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:paddingRight="15dp"
            android:gravity="right"
            android:text=""
            android:textSize="13sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar_audio"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="4" />

</android.support.constraint.ConstraintLayout>