...
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:padding="10dp"
                        android:text="Autoplay " />

                    <Button
                        android:id="@+id/shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableLeft="@drawable/ic_shuffle_black_24dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="30dp"
                        android:text=" SHUFFLE" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                   android:id="@+id/song_list_view"
                   android:fastScrollEnabled="false"
                   android:scrollbars="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
...
